--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
         <a href="#">ああああああああ</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#">新録</a>
+        <a href="#" class="login">ン</a>
       </div>
     </div>
   </header>
